<resources>
    <string name="app_name">HomeFarm</string>
    <string name="description">A simple, yet effective, way to repurpose excess homegrown fruits and veggies.</string>
    <string name="email">Email</string>
    <string name="signInLocation">Login</string>
    <string name="password">Password</string>
    <string name="signInButton">Sign in</string>
    <string name="registerText1">New to HomeFarm? </string>
    <string name="registerText2"><u>Click here to register.</u></string>
    <string name="registerButton">Register</string>
    <string name="registerEmail">Registration Email</string>
    <string name="registerPassword">Registration Password</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="inbox">Inbox</string>
    <string name="post">Post</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="verifyText">We\'ve sent a verification link to \n <b>%1$s</b> </string>
    <string name="checkEmail">Check your email</string>
    <string name="resendEmail1">Didn\'t receive an email?</string>
    <string name="resendEmail2"><u>Click here to resend.</u></string>
    <string name="checkVerificationStatus">Check verification status</string>
    <string name="registerName">Name</string>
    <string name="finishAccount">Finish setting up your account. Enter your first name and last initial.</string>
    <string name="next">Next</string>
    <string name="fruit">Fruit</string>
    <string name="descriptionInput">Description</string>
    <string name="postFruit">Post fruit</string>
    <string name="chooseImage">Choose image</string>
    <string name="signInHere"><u>Sign in here.</u></string>
    <string name="backLogin">Back to login page</string>
    <string name="chatText">Type a message</string>
    <string name="time">10:00</string>
    <string name="messageText">Text message</string>
    <string name="toName">Rijul Garg</string>
    <string name="recentMessageYou">"You: %1$s"</string>
    <string name="post_an_item">Post Fruit/Vegetable</string>
    <string name="take_photo">Take photo</string>
    <string name="fruit_vegetable">Fruit/vegetable</string>
</resources>