<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EmailVerification">

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/app_name"
        android:textColor="@color/light_green"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/mailbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appName"
        tools:ignore="ContentDescription"
        android:id="@+id/mailbox"/>

    <TextView
        android:id="@+id/checkEmail"
        android:layout_width="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content"
        android:text="@string/checkEmail"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:fontFamily="@font/noto_sans_bold"
        app:layout_constraintTop_toBottomOf="@id/mailbox" />

    <TextView
        android:id="@+id/verifyEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/noto_sans"
        android:text="@string/verifyText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkEmail" />

    <Button
        android:id="@+id/checkVerificationStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkVerificationStatus"
        app:layout_constraintTop_toBottomOf="@+id/verifyEmail"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/checkVerificationStatus"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:indeterminate="true"
        android:id="@+id/progressCheck" />

    <TextView
        android:id="@+id/resendEmail1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resendEmail1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/progressCheck" />

    <TextView
        android:id="@+id/resendEmail2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:textColor="@color/light_green"
        android:text="@string/resendEmail2"
        app:layout_constraintStart_toEndOf="@id/resendEmail1"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/progressCheck" />

    <TextView
        android:id="@+id/backLogin"
        android:drawableTint="@color/light_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backLogin"
        app:layout_constraintTop_toBottomOf="@id/resendEmail1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        android:drawablePadding="5dp"
        android:drawableLeft="@drawable/back_arrow"/>

</androidx.constraintlayout.widget.ConstraintLayout>