<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UserNameFragment">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingBottom="10dp"
        android:indeterminate="false"
        android:id="@+id/progressCheck"
        android:visibility="visible"
        android:max="100"
        android:progress="50"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/finishAccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressCheck"
        android:text="@string/finishAccount"
        android:textSize="24sp"
        android:layout_margin="8dp"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerNameText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/finishAccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/registerName"
        app:boxStrokeColor="@color/light_green"
        app:counterTextColor="@color/light_green"
        app:startIconDrawable="@drawable/account"
        app:errorEnabled="true"
        android:layout_margin="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans"
            android:minHeight="48dp"
            android:singleLine="true"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nextButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerNameText"
        android:text="@string/next"/>

</androidx.constraintlayout.widget.ConstraintLayout>